fix: The DropDownBase component has a set line height. This affects the center alignment of the content

--- a/src/share/components/DropDownBase/dropDownBase.scss
+++ b/src/share/components/DropDownBase/dropDownBase.scss
@@ -8,6 +8,7 @@
 
   &__display {
     flex-grow: 1;
+    line-height: 1;
     white-space: nowrap;
 
     &--empty {
